# smwc2wav

./: .gitignore  Cargo.toml  README.md  main.rs
src/: main.rs
