[package]
name = "smwc2wav"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
chrono = "0.4.39"
regex = "1.11.1"
zip = "2.2.2"
indicatif = "0.17.9"
inquire = "0.7.5"
which = "7.0.1"
audiotags = "0.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"