[package]
name = "smwc2wav"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
regex = "1.11.1"
regex-macro = "0.3.0"
zip = "2.2.3"
indicatif = "0.17.11"
inquire = "0.7.5"
which = "7.0.2"
audiotags = "0.5.0"
strum = "0.27.1"
strum_macros = "0.27.1"